--- a/pages/withdrawal/withdrawal.wxml
+++ b/pages/withdrawal/withdrawal.wxml
@@ -1,78 +1,78 @@
 <!--pages/withdrawal/withdrawal.wxml-->
-<view class="all"> 
- <view class="content">
-        <view class="head"> 您的当前余额：￥{{balance}}</view>
-       <view class="cards_box">
-            <view class="weixin_card {{selected?'on':''}}" bindtap="ison">提现到微信</view>
-            <view class="card_card {{selected1?'on':''}}" bindtap="ison2"> 提现到银行卡</view>
-        </view>
-        <view class="box">
-            <view class="weixin_box" wx:if="{{selected1}}">
-              <view class="limit">您当前余额可提现：{{member_recharge_money}}元</view>
-              <view class="tip">温馨提示：</view>
-              <view class="tip">① 您申请会员的充值余额，需用于平台消费，不能用于提现</view>
-              <view class="tip">② 由于各运营方已收取相应的中间手续费用，为保障用户利益，申请提现只收取2%提现手续费；</view>
-              <view class="tip">③能申请提现的余额需满1000元以上时才可申请提现；</view>
-              <view class="form">
-                <form  report-submit="false" bindsubmit="formSubmit" bindreset="">
-                    <view class="form_list">
-                        <view class="form_list_text">申请提现金额：</view>
-                       
-                  </view>
-                  <view class="form_list">
-                   <input type="text"   class="form_list_input"  placeholder="请输入金额，不能小于1000" name="money" />
-                        <text class="danwei">元</text>
-                  </view>
-                 
-                   <view style=' display: flex; align-items: center;position: relative;'>
-                        <view class="tip">提现手续费
-                        
-                        </view>
-                        <view style='color:red;font-size:24rpx;'>￥20</view>
-                        <view class="tip">(费率2%)
-                        </view>
-                    </view>
-                      
-       
-                      
-                    <view class="btn-area">
-                      <button form-type="submit" class='button-hovers'>提交申请</button>
-                  </view>
-                </form> 
-             </view>
-           
-            </view>
-             <view class="card_box" wx:else>
-            <view class="limit">您当前余额可提现：{{member_recharge_money}}元</view>
-              <view class="tip">温馨提示：</view>
-              <view class="tip">① 您申请会员的充值余额，需用于平台消费，不能用于提现</view>
-              <view class="tip">② 由于各运营方已收取相应的中间手续费用，为保障用户利益，申请提现只收取2%提现手续费；</view>
-              <view class="tip">③能申请提现的余额需满1000元以上时才可申请提现；</view>
-              <view class="form">
-                <form  report-submit="false" bindsubmit="formSubmit" bindreset="">
-                    <view class="form_list">
-                        <view class="form_list_text">申请提现金额：</view>
-                        <view>
-                        </view>
-                  </view>
-        <view class="form_list">
-          <input type="text"   class="form_list_input"  placeholder="请输入金额，不能小于1000" name="money" />
-                        <text class="danwei">元</text>
-        </view>
-                  <view style=' display: flex; align-items: center;position: relative;'>
-                        <view class="tip">提现手续费
-                        </view>
-                        <view style='color:red;font-size:24rpx;'>￥20</view>
-                        <view class="tip">(费率2%)
-                        </view>
-                    </view>
-                    <view class="btn-area">
-                      <button form-type="submit" class='button-hovers'>提交申请</button>
-                  </view>
-                </form> 
-             </view>
-           
-            </view>
-        </view>
+<view class="all">
+  <view class="content">
+    <view class="head"> 您的当前余额：￥{{balance}}</view>
+    <view class="cards_box">
+      <view class="weixin_card {{selected?'on':''}}" bindtap="ison">提现到微信</view>
+      <view class="card_card {{selected1?'on':''}}" bindtap="ison2"> 提现到银行卡</view>
     </view>
+    <view class="box">
+      <view class="weixin_box" wx:if="{{selected1}}">
+        <view class="limit">您当前余额可提现：{{member_recharge_money}}元</view>
+        <view class="tip">温馨提示：</view>
+        <view class="tip">① 您申请会员的充值余额，需用于平台消费，不能用于提现</view>
+        <view class="tip">② 由于各运营方已收取相应的中间手续费用，为保障用户利益，申请提现只收取2%提现手续费；</view>
+        <view class="tip">③能申请提现的余额需满1000元以上时才可申请提现；</view>
+        <view class="form">
+          <form report-submit="false" bindsubmit="formSubmit" bindreset="">
+            <view class="form_list">
+              <view class="form_list_text">申请提现金额：</view>
+
+            </view>
+            <view class="form_list">
+              <input type="text" class="form_list_input" placeholder="请输入金额，不能小于1000" name="money" />
+              <text class="danwei">元</text>
+            </view>
+
+            <view style=' display: flex; align-items: center;position: relative;'>
+              <view class="tip">提现手续费
+              </view>
+              <view style='color:red;font-size:24rpx;'>￥20</view>
+              <view class="tip">(费率2%)
+              </view>
+            </view>
+
+
+
+            <view class="btn-area">
+              <button form-type="submit" class='button-hovers'>提交申请</button>
+            </view>
+          </form>
+        </view>
+
+      </view>
+      <!-- 提现到微信 -->
+      <view class="card_box" wx:else>
+        <view class="limit">您当前余额可提现：{{member_recharge_money}}元</view>
+        <view class="tip">温馨提示：</view>
+        <view class="tip">① 您申请会员的充值余额，需用于平台消费，不能用于提现</view>
+        <view class="tip">② 由于各运营方已收取相应的中间手续费用，为保障用户利益，申请提现只收取2%提现手续费；</view>
+        <view class="tip">③能申请提现的余额需满1000元以上时才可申请提现；</view>
+        <view class="form">
+          <form report-submit="false" bindsubmit="formSubmit" bindreset="">
+            <view class="form_list">
+              <view class="form_list_text">申请提现金额：</view>
+              <view>
+              </view>
+            </view>
+            <view class="form_list">
+              <input type="text" class="form_list_input" placeholder="请输入金额，不能小于1000" name="money" />
+              <text class="danwei">元</text>
+            </view>
+            <view style=' display: flex; align-items: center;position: relative;'>
+              <view class="tip">提现手续费
+              </view>
+              <view style='color:red;font-size:24rpx;'>￥20</view>
+              <view class="tip">(费率2%)
+              </view>
+            </view>
+            <view class="btn-area">
+              <button form-type="submit" class='button-hovers'>提交申请</button>
+            </view>
+          </form>
+        </view>
+
+      </view>
+    </view>
+  </view>
 </view>
