--- a/pages/storage/view/view.wxml
+++ b/pages/storage/view/view.wxml
@@ -48,14 +48,15 @@
                     </view>
                     <view class="enviroment-item">
                         <image src="img/icon2.png" class="icon-temperature" />
-                        <text class="temperature">25.55°C</text>
+                        <text class="temperature" style='color:#D9250E'>25.55°C</text>
                     </view>
                     <view class="enviroment-item">
-                        <image src="img/icon3.png" class="icon-humidity" />
+                        <image src="img/u2173.png" class="icon-humidity" />
                         <text class="humidity">78.99%</text>
                     </view>
+                     <view>
                     <view class="more" bindtap="checkRealTimeData">
-                        <image src="img/icon5.png" />
+                       <image src="img/icon5.png" /></view>
                     </view>
                 </view>
             </view>
