--- a/pages/select_save_address/select_save_address.wxml
+++ b/pages/select_save_address/select_save_address.wxml
@@ -1,27 +1,45 @@
 <!--pages/select_address/select_address.wxml-->
 <view class='all'>
    <radio-group class="radio-group" bindchange="radioChange">
-     
-         <view class='content_list'> 
-        <view class='radio' >
-          <radio value=""  color='#fff'/>
-        </view>
-        <view class='add_information'>
-            <view>
-                 <text> 仓储编号:BJ02 </text>
-                 <text> 属性:整存整取 </text>
-             </view>
-             <view class='address'>
-             仓储地址:北京市朝阳区天鹅湾小区5号楼3单元201
-             </view>
-             <view>
-             仓储费标准:¥0.1/片/天   
-             </view>
-             <view style='font-size:20rpx;'>出仓或换手时收取</view>
-        </view>
-        <view class='add_ico'><image src='img/u9386.png'></image></view>
-     </view>
-      </radio-group>
- 
+
+      <view class='content_list'>
+         <view class='radio'>
+            <radio value="" color='#fff' />
+         </view>
+         <view class='add_information'>
+            <view class="list1">
+               <view> 仓储编号:BJ02 </view>
+               <view>
+                  <view class="sava_contents">
+                     <view class="savetitle">仓储费标准:</view>  
+                     <view class="aaa">
+                        <view class="sava_list">
+                              <view class="list"><text> ¥0.1</text>/片/天 </view> 
+                              <view class="list"><text> ¥0.1</text>/片/天 </view> 
+                              <view class="list"><text> ¥0.1</text>/片/天 </view> 
+                              <view class="list"><text> ¥0.1</text>/片/天 </view> 
+                        </view>
+                  </view>
+                    
+                  </view>
+                  <view class="tips">*出仓或换手时收取</view>
+
+               </view>
+            </view>
+            <view class='address'>
+               仓储地址:北京市朝阳区天鹅湾小区5号楼3单元201
+            </view>
+            <view class="list2">
+               <text class="list2_title">
+                  仓库描述：
+               </text>
+               <text class="list2_content">
+                  云南仓库四季如春，便于普洱茶的发酵
+               </text>
+            </view>
+         </view>
+      </view>
+   </radio-group>
+
    <!--<view class='add_address' bindtap='add_address'>新增收货地址</view>-->
-  </view>
+</view>
