--- a/pages/select_address/select_address.wxml
+++ b/pages/select_address/select_address.wxml
@@ -3,7 +3,7 @@
 	<radio-group class="radio-group"  wx:if="{{address.info!='没有填写地址记录'}}" bindchange="radioChange" data-id="{{item.id}}" >
 		<view class='content_list' wx:for='{{address}}'>
 			<view class="radio {{is?'':'weight'}}" >
-				<radio value="{{item.id}}" color='#fff' wx:if="{{is}}" />
+				<radio value="{{item.id}}" color='#fff' wx:if="{{is}}" checked="{{item.status==1?'true':''}}" />
 			</view>
 			<view class='add_information' bindtap="{{is_select_address}}"  data-tel='{{item.harvester_phone_num}}' data-name='{{item.harvester}}' data-address='{{item.address_name}}{{item.harvester_real_address}}'  data-id='{{item.id}}' name="aaa" >
 				<view>
@@ -15,6 +15,7 @@
 					{{item.address_name}}{{item.harvester_real_address}}
 				</view>
 			</view>
+			<view class="moren"  wx:if="{{item.status==1}}">默认</view>
 			<view class="list3">
 				<image src='img/u9386.png' class='add_ico' data-id="{{item.id}}"  bindtap="go_change_address" mode="widthFix"></image>
 				<image src='img/u5826.png' mode="widthFix" class='delect_ico' data-id="{{item.id}}" bindtap="delect"></image>
