--- a/pages/select_save_address/select_save_address.wxml
+++ b/pages/select_save_address/select_save_address.wxml
@@ -11,16 +11,19 @@
                <view> 仓储编号:BJ02 </view>
                <view>
                   <view class="sava_contents">
-                     <view class="savetitle">仓储费标准:</view>  
-                     <view class="aaa">
-                        <view class="sava_list">
-                              <view class="list"><text> ¥0.1</text>/片/天 </view> 
-                              <view class="list"><text> ¥0.1</text>/片/天 </view> 
-                              <view class="list"><text> ¥0.1</text>/片/天 </view> 
-                              <view class="list"><text> ¥0.1</text>/片/天 </view> 
-                        </view>
-                  </view>
-                    
+                     <view class="savetitle">仓储费标准:</view>
+                     <view class='scroll_view_border'>
+                        <swiper class="swiper_container" vertical="true" autoplay="true" circular="true"
+                           interval="5000">
+                           <block wx:for="{{noticeList}}">
+                              <swiper-item>
+                                 <view class="swiper_item"> ¥{{item.content0}}/天 </view>
+                              </swiper-item>
+                           </block>
+
+                        </swiper>
+                     </view>
+
                   </view>
                   <view class="tips">*出仓或换手时收取</view>
 
@@ -30,12 +33,12 @@
                仓储地址:北京市朝阳区天鹅湾小区5号楼3单元201
             </view>
             <view class="list2">
-               <text class="list2_title">
+               <view class="list2_title">
                   仓库描述：
-               </text>
-               <text class="list2_content">
+               </view>
+               <view class="list2_content">
                   云南仓库四季如春，便于普洱茶的发酵
-               </text>
+               </view>
             </view>
          </view>
       </view>
