--- a/pages/select_save_address/select_save_address.wxss
+++ b/pages/select_save_address/select_save_address.wxss
@@ -1,13 +1,6 @@
 
-@keyframes around {
-  from {
-   margin-left: 100%;
-  }
-  to {
-   /* var接受传入的变量 */
-   margin-left: var(--marqueeWidth--);
-  }
- }
+
+
 .content_list{
   display: flex;
   align-items: center;
@@ -17,9 +10,10 @@
   text-align: center;
 }
 .add_information{
-  width: 560rpx;
+  width: 640rpx;
   font-size: 26rpx;
   padding-right: 20rpx;
+  color: #333;
 
 }
 .add_information text{
@@ -37,6 +31,9 @@
   background: #fff;
 }
 .address{
+  padding-top:5rpx;
+   padding-bottom:12rpx;
+
 }
 
 .add_address{
@@ -59,6 +56,8 @@
 .tips{
   font-size: 24rpx;
   color: #868686;
+  margin-top:-18rpx;
+
 }
 .sava_contents{
   display: flex;
@@ -66,26 +65,55 @@
 .sava_list{
   display: flex;
 }
-.aaa{
-  background-color: #fe4655;
-  height: 50rpx;
-  line-height: 44rpx;
-  position: relative;
-  width: 100rpx;
-  margin-top:0rpx;
+.savetitle{
+  width: 280rpx;
 }
-.aaa:hover{
-  /* 不起作用 */
-  animation-play-state: paused;
-}
-.sava_list{
-  color:#fff;
-  font-size: 28rpx;
+.srcoll_view{
+  position: absolute;
+  top:0rpx;
+  height: 100rpx;
+  font-size: 30rpx;
   white-space: nowrap;
-  animation-name: around;
-  animation-duration: 10s;  /*过渡时间*/
-  animation-iteration-count: infinite;
-  animation-timing-function:linear;
+  line-height: 100rpx;
+  color: #00bff3;
+  animation:myfirst 20s linear infinite;
+  }
+ 
+  .scroll_view_border{
+  position: relative;
+  width: 100%;
+  height: 50rpx;
+  overflow: hidden;
+  }
+  .view_notice_contain {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 120rpx;
+    background: white;
+    font-size: 26rpx;
 }
 
- 
+.image_notice {
+    margin-left: 5rpx;
+}
+
+.swiper_container {
+    height: 120rpx;
+    width: 100%;
+}
+
+.swiper_item {
+  font-size: 25rpx;
+  color: #FF0000;
+  overflow: hidden;
+  
+}
+.list2{
+  display: flex;
+}
+.list2_content{
+  font-size: 25rpx;
+  color: #6B6B6B;
+}
