--- a/pages/storage/view/view.wxml
+++ b/pages/storage/view/view.wxml
@@ -46,13 +46,13 @@
                         <image src="img/gif1.gif" class="icon-video" />
                         <text class="temperature">实时视频</text>
                     </view>
-                    <view class="enviroment-item">
+                    <view class="enviroment-item" bindtap="checkRealTimeData">
                         <image src="img/icon2.png" class="icon-temperature" />
                         <text class="temperature" style='color:#D9250E'>25.55°C</text>
                     </view>
-                    <view class="enviroment-item">
+                    <view class="enviroment-item" bindtap="checkRealTimeData">
                         <image src="img/u2173.png" class="icon-humidity" />
-                        <text class="humidity">78.99%</text>
+                        <text class="humidity" style='color:#669900'>78.99%</text>
                     </view>
                      <view>
                     <view class="more" bindtap="checkRealTimeData">
