--- a/pages/integral_order/integral_order.wxml
+++ b/pages/integral_order/integral_order.wxml
@@ -1,8 +1,8 @@
 <view class="all" style='height:{{height}}px;'>
-   <view class="nav">
-	   <view class="" bindtap="go" data-id="../order/order"> 普通订单</view>
+ <view class="nav">
+	   <view  bindtap="go" data-id="../order/order"> 普通订单</view>
 	   <view class="" bindtap="go"> 众筹订单</view>
-	   <view class="" bindtap="go"> 众筹订单</view>
+	   <view class="" bindtap="go"> 定制订单</view>
 	   <view class="this" bindtap="go"  data-id="../integral_order/integral_order"> 积分订单</view>
    </view>
 	<view class='title'>
