--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -23,7 +23,7 @@
    <view class="nav">
 	   <view class="this" bindtap="go" data-id="../order/order"> 普通订单</view>
 	   <view class="" bindtap="go"> 众筹订单</view>
-	   <view class="" bindtap="go"> 众筹订单</view>
+	   <view class="" bindtap="go"> 定制订单</view>
 	   <view class="" bindtap="go"  data-id="../integral_order/integral_order"> 积分订单</view>
    </view>
 	<view class='title'>
