--- a/pages/settlement/settlement.wxss
+++ b/pages/settlement/settlement.wxss
@@ -584,3 +584,112 @@ align-items: center;
   
 }
 /* 优惠劵 */
+/* 存茶 */
+.add_information{
+  width: 640rpx;
+  font-size: 26rpx;
+  padding-right: 20rpx;
+  color: #333;
+
+}
+.add_information text{
+  margin-right: 20rpx;
+}
+.add_ico{
+  width: 60rpx;
+  height: 64rpx;
+
+}
+.content_list{
+  padding-top: 30rpx;
+  padding-bottom: 30rpx;
+  margin-top: 16rpx;
+  background: #fff;
+}
+.address{
+  padding-top:5rpx;
+   padding-bottom:12rpx;
+
+}
+
+.add_address{
+  width: 100%;
+  height: 90rpx;
+  line-height: 90rpx;
+  color: #fff;
+  position: fixed;
+  bottom: 0;
+  background: #00BBFF;
+  text-align: center;
+  font-size: 36rpx;
+}
+.list1{
+  display: flex;
+  justify-content: space-between;
+  color: #333333;
+  font-size: 25rpx;
+}
+.tips{
+  font-size: 24rpx;
+  color: #868686;
+  margin-top:-18rpx;
+
+}
+.sava_contents{
+  display: flex;
+}
+.sava_list{
+  display: flex;
+}
+.savetitle{
+  width: 280rpx;
+}
+.srcoll_view{
+  position: absolute;
+  top:0rpx;
+  height: 100rpx;
+  font-size: 30rpx;
+  white-space: nowrap;
+  line-height: 100rpx;
+  color: #00bff3;
+  animation:myfirst 20s linear infinite;
+  }
+ 
+  .scroll_view_border{
+  position: relative;
+  width: 100%;
+  height: 50rpx;
+  overflow: hidden;
+  }
+  .view_notice_contain {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 120rpx;
+    background: white;
+    font-size: 26rpx;
+}
+
+.image_notice {
+    margin-left: 5rpx;
+}
+
+.swiper_container {
+    height: 120rpx;
+    width: 100%;
+}
+
+.swiper_item {
+  font-size: 25rpx;
+  color: #FF0000;
+  overflow: hidden;
+  
+}
+.list2{
+  display: flex;
+}
+.list2_content{
+  font-size: 25rpx;
+  color: #6B6B6B;
+}
