--- a/pages/settlement/settlement.wxml
+++ b/pages/settlement/settlement.wxml
@@ -137,10 +137,10 @@
 			<view class="direct_mail {{selected1?'show':'hidden'}}" bindtap='go_shop_address'>
 				<view class='direct_mail_infor_all'>
 					<view class='direct_mail_infor'>
-						<text>北京市01店 </text>
-						<text> 010-54779999</text>
+						<text>{{shop_address.extract_name}} </text>
+						<text> {{shop_address.phone_num}}</text>
 					</view>
-					<view class='direct_mail_add'>北京市朝阳区天鹅湾小区5号楼3单元201</view>
+					<view class='direct_mail_add'>{{shop_address.shop_address}}</view>
 				</view>
 				<view class='more_img'>
 					<image src='img/u1959.png'></image>
@@ -168,7 +168,6 @@
 										 </view>
 					
 									  </view>
-									  <view class="tips">*出仓或换手时收取</view>
 					
 								   </view>
 								</view>
@@ -195,11 +194,12 @@
 	</view>
 	<view class="is_insurance {{selected2?'show':'hidden'}}" >
 		<view class='is_invoice2'>
+		<checkbox-group bindchange="checkboxChanges">
 			<label class="checkbox">
-				<checkbox value="选择仓储年限" />选择仓储年限
+				<checkbox value="选择仓储年限"   checked="{{is_checked==true?'true':''}}"/>选择仓储年限
 			</label>
+		</checkbox-group>
 			<image class="tips_img" src="img/u927.png" mode="widthFix"> </image>
-			<view class="" class="tips_content">*可选项，默认1年</view>
 		</view>
 		<view class='go_invoice_information'>
 			<view>
