--- a/app.wxss
+++ b/app.wxss
@@ -35,12 +35,11 @@ margin:10rpx;
 .share-content{
   width: 600rpx;
 }
-image {
-width:100%;
-height:100%;
-display:inline-block;
-overflow:hidden;
-
+.all image{
+  width:100%;
+  height:100%;
+  display:inline-block;
+  overflow:hidden;
 }
 .price_cont{
   display: flex;
