--- a/pages/storage/view/view.wxml
+++ b/pages/storage/view/view.wxml
@@ -109,50 +109,16 @@
             <view class="swiper-box">
                 <view class="swiper-title">创意众筹 · 成就希望</view>
                 <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" previous-margin="70rpx" next-margin="70rpx" display-multiple-items='1' circular class="zc-swiper">
-                    <swiper-item>
+                    <swiper-item wx:for="{{swiperDataList}}" wx:key="">
                         <view class="box">
                             <view class="swiper-img-box">
-                                <image src="./img/img3.png" />
+                                <image src="{{url}}{{item.goods_show_image}}" />
                             </view>
                             <view class="swiper-good-info">
-                                <view class="swiper-stock">剩余85份</view>
-                                <view class="swiper-desc hid-txt-two">
-                                    规格描述规格描述规格描述规格描述规格描述规格描述规格描述
-                                </view>
+                                <view class="swiper-stock">剩余{{item.days}}天</view>
+                                <view class="swiper-desc hid-txt-two">{{item.goods_describe}}</view>
                                 <view class="swiper-button">
-                                    <button>支持</button>
-                                </view>
-                            </view>
-                        </view>
-                    </swiper-item>
-                    <swiper-item>
-                        <view class="box">
-                            <view class="swiper-img-box">
-                                <image src="./img/img3.png" />
-                            </view>
-                            <view class="swiper-good-info">
-                                <view class="swiper-stock">剩余85份</view>
-                                <view class="swiper-desc hid-txt-two">
-                                    规格描述规格描述规格描述规格描述规格描述规格描述规格描述
-                                </view>
-                                <view class="swiper-button">
-                                    <button>支持</button>
-                                </view>
-                            </view>
-                        </view>
-                    </swiper-item>
-                    <swiper-item>
-                        <view class="box">
-                            <view class="swiper-img-box">
-                                <image src="./img/img3.png" />
-                            </view>
-                            <view class="swiper-good-info">
-                                <view class="swiper-stock">剩余85份</view>
-                                <view class="swiper-desc hid-txt-two">
-                                    规格描述规格描述规格描述规格描述规格描述规格描述规格描述
-                                </view>
-                                <view class="swiper-button">
-                                    <button>支持</button>
+                                    <button bindtap="support" data-id="{{item.id}}">支持</button>
                                 </view>
                             </view>
                         </view>
@@ -172,19 +138,23 @@
                 </view>
                 <text class="project-title">正在众筹</text>
                 <view class="zc-item-box">
-                    <view class="zc-item">
+                    <view class="zc-item" wx:for="{{crowdList}}" wx:key="">
                         <view class="left-img">
-                            <image src="./img/img2.png" />
+                            <image src="{{url}}{{item.goods_show_image}}" />
                         </view>
                         <view class="right-project-info">
-                            <view class="project-name hid-txt-one">舌尖上的乡愁——班章烤茶飘香</view>
-                            <wxzx-progress class="wxzx-progress" percent="100" show-info border-radius="4px" width="300" stroke-width='12' radius='6' active-color="#ff9600,#ff1000,#ff0000"></wxzx-progress>
-                            <text class="percent-num">100%</text>
-                            <view class="project-people">666人支持 | 已完成</view>
+                            <view class="project-name hid-txt-one">{{item.project_name}}</view>
+                            <wxzx-progress class="wxzx-progress" percent="{{item.centum}}" show-info border-radius="4px" width="300" stroke-width='12' radius='6' active-color="#ff9600,#ff1000,#ff0000"></wxzx-progress>
+                            <text class="percent-num">{{item.centum}}%</text>
+                            <view class="project-people">{{item.collecting}}人支持 | {{item.centum==100?'已完成':'进行中'}}</view>
                             <view class="project-price">
                                 <text>￥299</text>
-                                <!-- <button class="check-project">立即查看</button> -->
-                                <button class="join-project">支持</button>
+                                <button  wx:if="{{1}}" class="join-project" 
+                                    bindtap="support"
+                                    data-id="{{item.id}}">支持</button>
+                                <button wx:else class="check-project"
+                                    bindtap="support"
+                                    data-id="{{item.id}}">立即查看</button>
                             </view>
                         </view>
                     </view>
