--- a/app.wxss
+++ b/app.wxss
@@ -42,9 +42,9 @@ margin:10rpx;
 image {
 width:100%;
 height:100%;
-display:inline-block;
+display:flex;
 overflow:hidden;
-
+ flex-direction: column;
 }
 .price_cont{
   display: flex;
