--- a/wxParse/wxParse.wxss
+++ b/wxParse/wxParse.wxss
@@ -96,6 +96,10 @@ view{
 .wxParse-img{
     /*background-color: #efefef;*/
     overflow: hidden;
+    display:flex;
+    overflow:hidden;
+    width: 100%;
+    height: 100%;
 }
 
 .wxParse-blockquote {
