--- a/app.wxss
+++ b/app.wxss
@@ -39,12 +39,12 @@ margin:10rpx;
 .share-content{
   width: 600rpx;
 }
-image {
+.all image {
 width:100%;
 height:100%;
 display:flex;
 overflow:hidden;
- flex-direction: column;
+flex-direction: column;
 }
 .price_cont{
   display: flex;
