--- a/pages/storage/view/view.wxml
+++ b/pages/storage/view/view.wxml
@@ -145,7 +145,7 @@
                         </view>
                         <view class="right-project-info">
                             <view class="project-name hid-txt-one">{{item.project_name}}</view>
-                            <wxzx-progress class="wxzx-progress" percent="{{item.centum}}" show-info border-radius="4px" width="300" stroke-width='12' radius='6' active-color="#ff9600,#ff1000,#ff0000"></wxzx-progress>
+                            <wxzx-progress class="wxzx-progress" percent="{{item.centum>100?100:item.centum}}" show-info border-radius="4px" width="300" stroke-width='12' radius='6' active-color="#ff9600,#ff1000,#ff0000"></wxzx-progress>
                             <text class="percent-num">{{item.centum}}%</text>
                             <view class="project-people">{{item.collecting}}人支持 | {{item.centum==100?'已完成':'进行中'}}</view>
                             <view class="project-price">
